upgrade to V3.9 step
Add to Lib Arithmetic Floating point components Fr
Miscellaneous corrections.

--- a/en/html/libs/arith/fpadder.html
+++ b/en/html/libs/arith/fpadder.html
@@ -78,7 +78,7 @@
           South edge: 
          </dt>
         <dd>
-          OutPut: Error Set to  <b class="unov">1</b> if the negator receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
+          OutPut: Error, set to <b class="unov">1</b> if the adder receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
         </dd>
       </dl>
 	  </div>
