--- a/en/html/libs/arith/fpsubstractor.html
+++ b/en/html/libs/arith/fpsubstractor.html
@@ -65,7 +65,7 @@
           West edge, south end:
          </dt>
         <dd>
-          Input: The other of the two floating-point values to substract. Bit width matches the Data <b class="property">Float size</b> attribute.
+          Input: The subtrahend of the subtraction floating-point values to substract. Bit width matches the Data <b class="property">Float size</b> attribute.
         </dd>
         <dt class="lib">
           East edge:
@@ -77,7 +77,7 @@
           South edge: 
          </dt>
         <dd>
-          OutPut: Error Set to  <b class="unov">1</b> if the negator receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
+          OutPut: Error, set to  <b class="unov">1</b> if the negator receives an error (<b class="evalue">E</b>) or undefined (<b class="uvalue">U</b>) signal or the floating-point values <var>NaN</var>
         </dd>
       </dl>
 	  </div>
