--- a/fr/html/libs/arith/adder.html
+++ b/fr/html/libs/arith/adder.html
@@ -62,13 +62,13 @@
 		  Bord ouest, extrémité nord:
         </dt>
         <dd>
-          Entrée: Une des deux valeurs à ajouter. La largeur des données en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
+          Entrée: Une des deux valeurs à additionner. La largeur des données en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
         </dd>
          <dt class="lib">
 		  Bord ouest, extrémité sud:
         </dt>
         <dd>
-          Entrée: L'autre des deux valeurs à ajouter. La largeur des données en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
+          Entrée: L'autre des deux valeurs à additionner. La largeur des données en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
         </dd>
          <dt class="lib">
 		  Bord nord : étiqueté <var>c in</var>
