--- a/fr/html/libs/arith/subtractor.html
+++ b/fr/html/libs/arith/subtractor.html
@@ -61,34 +61,34 @@
       </h2>
       <dl>
          <dt class="lib">
-           Bord ouest, extrémité nord: (entrée, La largeur des donnée en bit correspond à l'attribut Bits de données)
+           Bord ouest, extrémité nord: 
         </dt>
         <dd>
-          Entrée. Le minimum de la soustraction, c'est-à-dire le nombre à partir duquel il faut soustraire (diminuende). La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
+          Entrée : Le minimum de la soustraction, c'est-à-dire le nombre à partir duquel il faut soustraire (diminuende). La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
         </dd>
          <dt class="lib">
-          Bord ouest, extrémité sud: (entrée, La largeur des donnée en bit correspond à l'attribut Bits de données)
+          Bord ouest, extrémité sud: 
         </dt>
         <dd>
-          Entrée. Le soustractif de la soustraction, c'est-à-dire le nombre à soustraire du diminuende (diminuteur). La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
+          Entrée : Le soustractif de la soustraction, c'est-à-dire le nombre à soustraire du diminuende (diminuteur). La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
         </dd>
          <dt class="lib">
-          Bord nord : étiqueté <var>b in</var> (entrée, largeur de donnée en bit 1)
+          Bord nord : étiqueté <var>b in</var>
         </dt>
         <dd>
-         Si 1, alors 1 est emprunté sur la différence. Si la valeur est inconnue (c'est-à-dire flottante), on suppose qu'elle est égale à 0. La largeur de donnée en bit : 1.
+          Entrée : Si 1, alors 1 est emprunté sur la différence. Si la valeur est inconnue (c'est-à-dire flottante), on suppose qu'elle est égale à 0. La largeur de donnée en bit : 1.
         </dd>
          <dt class="lib">
-          Bord est (sortie, La largeur des donnée en bit correspond à l'attribut Bits de données)
+          Bord est
         </dt>
         <dd>
-          Les <var>dataBits</var> bits inférieurs de la différence des deux valeurs provenant du bord ouest, moins le <var>b</var><sub><var>in</var></sub> bit. La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
+          Sortie : Les <var>dataBits</var> bits inférieurs de la différence des deux valeurs provenant du bord ouest, moins le <var>b</var><sub><var>in</var></sub> bit. La largeur des donnée en bit correspond à l'attribut <b class="property">Largeur de donnée</b>.
         </dd>
          <dt class="lib">
-          Bord sud : étiqueté <var>b out</var> (sortie, largeur de donnée en bit 1)
+          Bord sud : étiqueté <var>b out</var>
         </dt>
         <dd>
-          Le bit d'emprunt calculé pour la différence. Si les valeurs soustraites en tant que valeurs non signées donnent une valeur négative, alors ce bit sera 1 ; sinon, il sera 0. La largeur de donnée en bit : 1.
+          Sortie : Le bit d'emprunt calculé pour la différence. Si les valeurs soustraites en tant que valeurs non signées donnent une valeur négative, alors ce bit sera 1 ; sinon, il sera 0. La largeur de donnée en bit : 1.
         </dd>
       </dl>
       <h2>
