--- a/libstatus.html
+++ b/libstatus.html
@@ -686,7 +686,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Adder</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpadder.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpadder.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpadder.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpadder.html">__</a></td>
@@ -702,7 +702,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Subtractor</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpsubtractor.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpsubtractor.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpsubtractor.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpsubtractor.html">__</a></td>
@@ -718,7 +718,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Multiplier</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpmultiplier.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpmultiplier.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpmultiplier.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpmultiplier.html">__</a></td>
@@ -734,7 +734,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Divider</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpdivider.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpdivider.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpdivider.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpdivider.html">__</a></td>
@@ -750,7 +750,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Negator</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpnegator.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpnegator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpnegator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpnegator.html">__</a></td>
@@ -766,7 +766,7 @@
 		<td align="left"></td>
 		<td align="left">Floating Point Comparator</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/arith/fpcomparator.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/arith/fpadder.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/arith/fpcomparator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/arith/fpcomparator.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/arith/fpcomparator.html">__</a></td>
