--- a/fr/html/libs/arith/fpnegator.html
+++ b/fr/html/libs/arith/fpnegator.html
@@ -49,42 +49,43 @@
         Comportement
       </h2>
       <p>
-        Computes the two's-complement negation of the input. This negation is performed by maintaining all the lower-order bits up to the lowest-order 1, and complementing all bits above that.
-      </p>
-      <p>
-        If the value to be negated happens to be the least negative value, then its negation (which cannot be represented in two's-complement form), is still the least negative value.
-      </p>
+        Le composant inverseur renvoie des valeurs à virgule flottante de signe opposé aux valeurs à virgule flottante d'entrée. Si la donnée d'entrée contiens des signaux non définis (<b class="uvalue">U</b>), d'erreur (<b class="evalue">E</b>) ou la valeur <var>NaN</var>, il émettra la valeur <var>NaN</var> et un <b class="unov">1</b> sur la sortie d'erreur au sud.
+      </p> 
       <h2>
         Pins
       </h2>
+	  <div class="attliste">
       <dl>
-        <dt>
-          West edge (input, bit width matches Largeur de données attribute)
+       <dt class="lib">
+          Bord ouest
         </dt>
         <dd>
-          The value to negate.
+          Entrée : Valeurs à virgule flottante à inverser. La largeur de donnée en bits correspond à la propriété <b class="property">Dimension flottant</b>.
         </dd>
-        <dt>
-          East edge, labeled -<var>x</var> (output, bit width matches Largeur de données attribute)
+        <dt class="lib">
+          Bord est
         </dt>
         <dd>
-          The negation of the input. If the input happens to be the least negative value representable in <var>dataBits</var> bits, however, then the output matches the input.
+          Sortie : Valeurs à virgule flottante avec signe inversé. La largeur de donnée en bits correspond à la propriété <b class="property">Dimension flottant</b>
         </dd>
       </dl>
+	  </div>
       <h2>
         Attributs
       </h2>
       <p>
-        When the component is selected or being added, Alt-0 through Alt-9 alter its <b class="vprop">Largeur de données</b> attribute.
+        Lorsque le composant est sélectionné ou en cours d'ajout, les touches Alt-0 à Alt-9 modifient son attribut <b class="property">Dimension flottant</b>.
       </p>
+	  <div class="attliste">
       <dl>
         <dt>
-          Largeur de données
+          Dimension flottant
         </dt>
         <dd>
-          The bit width of the component's input and output.
+          La largeur de donnée en bit de l'inverseur 32 ou 64 bits.
         </dd>
       </dl>
+	  </div>
       <h2>
         Comportement de l'outil pousser
       </h2>
