--- a/fr/html/libs/arith/fpsubtractor.html
+++ b/fr/html/libs/arith/fpsubtractor.html
@@ -49,63 +49,54 @@
         Comportement
       </h2>
       <p>
-        This component subtracts values coming in via the west inputs (the upper minus the lower) and outputs the difference on the east output. The component is designed so that it can be cascaded with other subtractors to provide subtract more bits than is possible with a single subtractor: The borrow-in input provides a one-bit value to be borrowed out of the difference (if the borrow-in input is specified), and a borrow-out output indicates whether the component needs to borrow an upper-order bit to complete the subtraction without underflow (assuming unsigned subtraction).
-      </p>
-      <p>
-        Internally, the subtractor simply performs a bitwise NOT on the subtrahend, and add this to the minuend along with the NOT of the borrow-in input. (The <em>minuend</em> is the first operand (upper input) to the subtraction, and the <em>subtrahend</em> is the second (lower input). I happen to like the antiquated terms.)
-      </p>
-      <p>
-        If either of the operands contains some floating bits or some error bits, then the component will perform a partial subtraction. That is, it will compute as many low-order bits as possible. But above the floating or error bit, the result will have floating or error bits.
+        Ce composant soustrait les valeurs en virgule flottante des entrées ouest (la valeur supérieure moins la valeur inférieure) et affiche la différence des valeurs en virgule flottante sur la sortie est.<br>
+        Si les données d'entrée contiennent des signaux non définis (<b class="uvalue">U</b>), d'erreur (<b class="evalue">E</b>) ou la valeur <var>NaN</var>, il émettra la valeur <var>NaN</var> et un <b class="unov">1</b> sur la sortie d'erreur au sud.
       </p>
       <h2>
         Pins
       </h2>
+	  <div class="attliste">
       <dl>
-        <dt>
-          West edge, north end (input, bit width matches Largeur de données attribute)
+        <dt class="lib">
+          Bord ouest, extrémité nord
         </dt>
         <dd>
-          The minuend of the subtraction; that is, the number from which to subtract.
+          Entrée : Le diminuende à virgule flottante de la soustraction, c'est-à-dire le nombre à partir duquel il faut soustraire. La largeur de donnée en bits correspond à la propriété <b class="property">Dimension flottant</b>.
         </dd>
-        <dt>
-          West edge, south end (input, bit width matches Largeur de données attribute)
+        <dt class="lib">
+          Bord ouest, extrémité sud
         </dt>
         <dd>
-          The subtrahend of the subtraction; that is, the number to subtract from the minuend.
+          Entrée. Le diminuteur de la soustraction, c'est-à-dire le nombre à soustraire du diminuende. La largeur de donnée en bits correspond à l'attribut <b class="property">Dimension flottant</b>.
         </dd>
-        <dt>
-          North edge, labeled <var>b in</var> (input, bit width 1)
+        <dt class="lib">
+          Bord est
         </dt>
         <dd>
-          If 1, then 1 is borrowed out of the difference. If the value is unknown (i.e., floating), then it is assumed to be 0.
+           Sortie : La différence entre les deux valeurs provenant du bord ouest. La largeur de donnée en bits correspond à l'attribut <b class="property">Dimension flottant</b>.
         </dd>
-        <dt>
-          East edge (output, bit width matches Largeur de données attribute)
+        <dt class="lib">
+           Bord Sud
         </dt>
         <dd>
-          The lower <var>dataBits</var> bits of the difference of the two values coming in the west edge, minus the <var>b</var><sub><var>in</var></sub> bit.
-        </dd>
-        <dt>
-          South edge, labeled <var>b out</var> (output, bit width 1)
-        </dt>
-        <dd>
-          The borrow bit computed for the difference. If the values subtracted as unsigned values yield a negative value, then this bit will be 1; otherwise, it will be 0.
+          Erreur, prend la valeur <b class="unov">1</b> si le soustracteur reçoit un signal d'erreur (<b class="evalue">E</b>),indéfini (<b class="uvalue">U</b>) ou les valeurs en virgule flottante <var>NaN</var>. La largeur de donnée est de 1.
         </dd>
       </dl>
       <h2>
         Attributs
       </h2>
       <p>
-        When the component is selected or being added, Alt-0 through Alt-9 alter its <b class="vprop">Largeur de données</b> attribute.
+        Lorsque le composant est sélectionné ou en cours d'ajout, les touches Alt-0 à Alt-9 modifient son attribut <b class="property">Dimension flottant</b>.
       </p>
       <dl>
         <dt>
-          Largeur de données
+          Dimension flottant
         </dt>
         <dd>
           The bit width of the values to be subtracted and of the result.
         </dd>
       </dl>
+	  </div>
       <h2>
         Comportement de l'outil pousser
       </h2>
