--- a/en/html/libs/arith/fpsubtractor.html
+++ b/en/html/libs/arith/fpsubtractor.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="en">
     <title>
-      Floating Point Substractor
+      Floating Point Subtractor
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/fpsubstractor.png" alt="#########" width="32" height="32" align="middle"> <em>Floating Point Substractor</em>
+        <img class="iconlibs" src="../../../../icons/6464/fpsubtractor.png" alt="#########" width="32" height="32" align="middle"> <em>Floating Point Subtractor</em>
       </h1>
       <table>
         <tbody>
@@ -39,7 +39,7 @@
               <strong>Appearance:</strong>
             </td>
             <td valign="top">
-              <img class="appearancelibs" src="../../../../img-libs/fpsubstractor.png" alt="#########" width="64" height="64">
+              <img class="appearancelibs" src="../../../../img-libs/fpsubtractor.png" alt="#########" width="64" height="64">
             </td>
           </tr>
         </tbody>
